First commited as before_61324_rev1